[gd_scene load_steps=17 format=3 uid="uid://c48fx076wlat1"]

[ext_resource type="Script" uid="uid://dyherbih810xi" path="res://objects/ship/ship.object.gd" id="1_hy5k6"]
[ext_resource type="Script" uid="uid://dcc7n8hre02bg" path="res://objects/ship/traits/ship-sprite/ship-sprite.trait.gd" id="3_ui8mw"]
[ext_resource type="Script" uid="uid://duc5ycgutytb3" path="res://entities/ship.entity.gd" id="5_lcgme"]
[ext_resource type="LabelSettings" uid="uid://d4lnbip5paiu6" path="res://settings/labels/green.tres" id="9_bseor"]
[ext_resource type="Script" uid="uid://cw7xhyte0cclj" path="res://objects/ship/traits/movable/states/idle.state.gd" id="10_dhnsx"]
[ext_resource type="Script" uid="uid://c2iwltg3il24t" path="res://objects/ship/traits/faced/faced.trait.gd" id="10_ienkl"]
[ext_resource type="LabelSettings" uid="uid://dofyxmyhlyavv" path="res://settings/labels/red.tres" id="10_tlr80"]
[ext_resource type="Script" uid="uid://byah6l0q1ipxp" path="res://objects/ship/traits/roll/roll.trait.gd" id="11_21p16"]
[ext_resource type="Script" uid="uid://dtq6uio5okjq5" path="res://objects/ship/traits/movable/states/moving.state.gd" id="11_66gry"]
[ext_resource type="Script" uid="uid://bc2xh7b1wpy28" path="res://objects/ship/traits/movable/movable.trait.gd" id="11_lcgme"]

[sub_resource type="Resource" id="Resource_ienkl"]
script = ExtResource("5_lcgme")
metadata/_custom_type_script = "uid://duc5ycgutytb3"

[sub_resource type="GDScript" id="GDScript_21p16"]
script/source = "class_name MovableData1
extends Resource

var desiredPosition: Vector2i
var currentPosition: Vector2i

@export var velocityX: int = 0
@export var velocityY: int = 0
@export var timePeriod: int = 1000
"

[sub_resource type="Resource" id="Resource_21p16"]
script = SubResource("GDScript_21p16")
metadata/_custom_type_script = "uid://dxoscvoir0hir"

[sub_resource type="GDScript" id="GDScript_ienkl"]
script/source = "class_name FacedData1
extends Resource
enum Direction {N, S, NE, SE, NW, SW}

@export var direction: Direction = Direction.N

const Direction2Vector2i = {
	Direction.N: Vector2i(0, -1),
	Direction.NW: Vector2i(-1, 0),
	Direction.SW: Vector2i(-1, 1),
	Direction.S: Vector2i(0, 1),
	Direction.SE: Vector2i(1, 1),
	Direction.NE: Vector2i(1, 0),
}

const Direction2Vector2iOdd = {
	Direction.N: Vector2i(0, -1),
	Direction.NW: Vector2i(-1, -1),
	Direction.SW: Vector2i(-1, 0),
	Direction.S: Vector2i(0, 1),
	Direction.SE: Vector2i(1, 0),
	Direction.NE: Vector2i(1, -1),
}

const TurnLeftDict = {
	Direction.N: Direction.NW,
	Direction.NW: Direction.SW,
	Direction.SW: Direction.S,
	Direction.S: Direction.SE,
	Direction.SE: Direction.NE,
	Direction.NE: Direction.N,
}

const TurnRightDict = {
	Direction.N: Direction.NE,	
	Direction.NE: Direction.SE,
	Direction.SE: Direction.S,
	Direction.S: Direction.SW,
	Direction.SW: Direction.NW,
	Direction.NW: Direction.N,
}
"

[sub_resource type="Resource" id="Resource_dhnsx"]
script = SubResource("GDScript_ienkl")
metadata/_custom_type_script = "uid://f7wr4g3ndncf"

[sub_resource type="CircleShape2D" id="CircleShape2D_ienkl"]
radius = 48.0

[node name="Ship" type="CharacterBody2D"]
input_pickable = true
motion_mode = 1
script = ExtResource("1_hy5k6")
shipData = SubResource("Resource_ienkl")
movableData = SubResource("Resource_21p16")
facedData = SubResource("Resource_dhnsx")

[node name="MovableTrait" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("11_lcgme")
state = NodePath("IdleState")
metadata/_custom_type_script = "uid://bc2xh7b1wpy28"

[node name="IdleState" type="Node" parent="MovableTrait"]
script = ExtResource("10_dhnsx")
metadata/_custom_type_script = "uid://cw7xhyte0cclj"

[node name="MovingState" type="Node" parent="MovableTrait"]
script = ExtResource("11_66gry")
metadata/_custom_type_script = "uid://dtq6uio5okjq5"

[node name="FacedTrait" type="Node" parent="."]
script = ExtResource("10_ienkl")
metadata/_custom_type_script = "uid://c2iwltg3il24t"

[node name="RollTrait" type="Node" parent="."]
script = ExtResource("11_21p16")
metadata/_custom_type_script = "uid://byah6l0q1ipxp"

[node name="ShipSpriteTrait" type="Sprite2D" parent="."]
hframes = 6
script = ExtResource("3_ui8mw")
metadata/_custom_type_script = "uid://dcc7n8hre02bg"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ienkl")

[node name="Labels" type="Node2D" parent="."]
scale = Vector2(2, 2)

[node name="Name" type="Label" parent="Labels"]
offset_left = -59.0
offset_top = 39.0
offset_right = 59.0
offset_bottom = 56.0
text = "Label"
label_settings = ExtResource("9_bseor")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Position" type="Label" parent="Labels"]
offset_left = -57.5
offset_top = 20.0
offset_right = 60.5
offset_bottom = 40.0
text = "Label"
label_settings = ExtResource("10_tlr80")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
